// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formats YAML 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: { interval: weekly }

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    ignore:
      - dependency-name: |-
          @standard-config/prettier
"
`;

exports[`respects \`bracketSpacing\` 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: {interval: weekly}

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    ignore:
      - dependency-name: |-
          @standard-config/prettier
"
`;

exports[`respects \`proseWrap\` 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest
  versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: { interval: weekly }

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    ignore:
      - dependency-name: |-
          @standard-config/prettier
"
`;

exports[`respects \`tabWidth\` 1`] = `
"version: 2

description: >-
    You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
    - package-ecosystem: github-actions
      directory: /
      schedule: { interval: weekly }

    - package-ecosystem: npm
      directory: /
      schedule:
          interval: daily
      versioning-strategy: increase
      ignore:
          - dependency-name: |-
                @standard-config/prettier
"
`;

exports[`supports \`yamlBlockStyle\` 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: { interval: weekly }

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    ignore:
      - dependency-name: >-
          @standard-config/prettier
"
`;

exports[`supports \`yamlBlockStyle\` 2`] = `
"version: 2

description: |-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: { interval: weekly }

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    ignore:
      - dependency-name: |-
          @standard-config/prettier
"
`;

exports[`supports \`yamlCollectionStyle\` 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule:
      interval: weekly

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    ignore:
      - dependency-name: |-
          @standard-config/prettier
"
`;

exports[`supports \`yamlCollectionStyle\` 2`] = `
"{
  version: 2,

  description: You can use Dependabot to keep the packages you use updated to the latest versions.,

  updates:
    [
      {
        package-ecosystem: github-actions,
        directory: /,
        schedule: { interval: weekly },
      },

      {
        package-ecosystem: npm,
        directory: /,
        schedule: { interval: daily },
        versioning-strategy: increase,
        ignore: [{ dependency-name: "@standard-config/prettier" }],
      },
    ],
}
"
`;

exports[`supports \`yamlCollectionStyle\` 3`] = `
"{
  version: 2,

  description: You can use Dependabot to keep the packages you use updated to the latest versions.,

  updates:
    [
      {
        package-ecosystem: github-actions,
        directory: /,
        schedule: {interval: weekly},
      },

      {
        package-ecosystem: npm,
        directory: /,
        schedule: {interval: daily},
        versioning-strategy: increase,
        ignore: [{dependency-name: "@standard-config/prettier"}],
      },
    ],
}
"
`;

exports[`supports \`yamlQuoteKeys\` 1`] = `
""version": 2

"description": >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

"updates":
  - "package-ecosystem": github-actions
    "directory": /
    "schedule": { "interval": weekly }

  - "package-ecosystem": npm
    "directory": /
    "schedule":
      "interval": daily
    "versioning-strategy": increase
    "ignore":
      - "dependency-name": |-
          @standard-config/prettier
"
`;

exports[`supports \`yamlQuoteKeys\` 2`] = `
"'version': 2

'description': >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

'updates':
  - 'package-ecosystem': github-actions
    'directory': /
    'schedule': { 'interval': weekly }

  - 'package-ecosystem': npm
    'directory': /
    'schedule':
      'interval': daily
    'versioning-strategy': increase
    'ignore':
      - 'dependency-name': |-
          @standard-config/prettier
"
`;

exports[`supports \`yamlQuoteValues\` 1`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: "github-actions"
    directory: "/"
    schedule: { interval: "weekly" }

  - package-ecosystem: "npm"
    directory: "/"
    schedule:
      interval: "daily"
    versioning-strategy: "increase"
    ignore:
      - dependency-name: |-
          @standard-config/prettier
"
`;

exports[`supports \`yamlQuoteValues\` 2`] = `
"version: 2

description: >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

updates:
  - package-ecosystem: 'github-actions'
    directory: '/'
    schedule: { interval: 'weekly' }

  - package-ecosystem: 'npm'
    directory: '/'
    schedule:
      interval: 'daily'
    versioning-strategy: 'increase'
    ignore:
      - dependency-name: |-
          @standard-config/prettier
"
`;

exports[`supports \`yamlQuoteValues\` 3`] = `
"'version': 2

'description': >-
  You can use Dependabot to keep the packages you use updated to the latest versions.

'updates':
  - 'package-ecosystem': 'github-actions'
    'directory': '/'
    'schedule': { 'interval': 'weekly' }

  - 'package-ecosystem': 'npm'
    'directory': '/'
    'schedule':
      'interval': 'daily'
    'versioning-strategy': 'increase'
    'ignore':
      - 'dependency-name': |-
          @standard-config/prettier
"
`;

exports[`works with other plugins 1`] = `
"foo: [bar, baz]
"
`;
